@@ -1,5 +1,7 @@
 2010-04-03  Russ Allbery  <rra@stanford.edu>
 
+	* t/basic.t: Add some tests for the scalar value of the hash.
+
 	* ShadowHash.pm: Add explicit documentation for the add() method.
 	Mention that AnyDBM_File doesn't support EXISTS since some of its
 	underlying modules don't.
